--- a/WT EX1.html
+++ b/WT EX1.html
@@ -8,17 +8,13 @@
 	<h1>PORT FOLIO</h1>
 	<p>
 	
-		<img src="https://lh3.googleusercontent.com/a/AGNmyxYVEtkg3H8xlNFrZh1Ly3d0ndUfnp60-a_uFSkb=s360" width="300px"
-			height="300px">
-		</p>
-	</left>
-	<right>
+		<img src="https://lh3.googleusercontent.com/a/AGNmyxYVEtkg3H8xlNFrZh1Ly3d0ndUfnp60-a_uFSkb=s360" width="300px"height="300px">
 		<h1>PRADEEP T</h1>
 		<h2>112 PONRAJ PILLAI ST, KODANGIPATTY <br>
 			THENI-625531 <br>
 			Ph. No:+91 6369633857 <br>
-			Email: pradeepthiruppathi19@gmail.com</h2>
-	<center><button style="size: 20px;"><a href="file:///D:/Vivo%20Backup%20Vdos/Downloads/Pradeep%20Resume.pdf">Resume</a></button></center>
+			Email: pradeepthiruppathi19@gmail.com</h2></p>
+	<center><button style="size:30px;"><a href="Pradeep Resume.pdf">Resume</a></button> <button style="size:30px;"><a href="Ex2.html">Form</a></button>
 	</right>
 	<center>
 		<table border="2"  cellspacing="8" cellpadding="5">
@@ -135,7 +131,7 @@
 				color: lightsteelblue;
 				font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 				size: 10px;
-				padding-right: ;
+				padding: right 12px; ;
 			}
 			
 		</style>
